k8s/argocd/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - argocd.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-applicationset-controller
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - argocd-appset.as212024.net
  rules:
    - matches:
        - path:
            value: "/api/webhook"
      backendRefs:
        - name: argocd-applicationset-controller
          port: 7000
