k8s/argocd/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
